@@ -2,6 +2,8 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2018, PHP 7.1.24
 
+- Core:
+  . Fixed bug #76946 (Cyclic reference in generator not detected). (Nikita)
 
 11 Oct 2018, PHP 7.1.23
 
